# mcp-re

./: .bazelignore  .bazelrc  .dockerignore  .gcloudignore  .gitignore  BUILD.bazel  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  NOTICE.md  PACKAGE_MANIFEST.json  README.md  SECURITY.md  THIRD_PARTY.md  deny.toml
docs/: AGENT_INSTRUCTIONS.md  BUILD.bazel  CURRENT_ARCHITECTURE.md  LICENSING.md  MCP-RE-IN-ONE-PAGE.md  MCP-S-IN-ONE-PAGE.md  PROJECT_STATUS.md  RELEASE_CHECKLIST.md  SECURITY_BOUNDARY.md  UPSTREAM_PROPOSAL_PROCESS.md  conformance-guide.md  demo-minimal-fileserver.md  dogfood-runbook.md  fleet-deployment-guide.md  host-integration-guide.md  mode-c-attested-ingress-gcp-cookbook.md  quickstart-gcp-kms.md  quickstart-local.md  sidecar-deployment-guide.md  transport-hardening-guide.md
docs/adr/: ADR-MCPRE-053-admission-assertion.md  ADR-MCPRE-054-scitt-receipts.md  README.md  adr-mcpre-050.md  adr-mcpre-051.md  adr-mcpre-052.md  adr-mcps-001.md  adr-mcps-002.md  adr-mcps-003.md  adr-mcps-004.md  adr-mcps-005.md  adr-mcps-006.md  adr-mcps-007.md  adr-mcps-008.md  adr-mcps-009.md  adr-mcps-010.md  adr-mcps-011.md  adr-mcps-012.md  adr-mcps-013.md  adr-mcps-014.md  adr-mcps-015.md  adr-mcps-016.md  adr-mcps-017.md  adr-mcps-018.md  adr-mcps-019.md  adr-mcps-020.md  adr-mcps-021.md  adr-mcps-023.md  adr-mcps-026.md  adr-mcps-028.md  adr-mcps-029.md  adr-mcps-031.md  adr-mcps-032.md  adr-mcps-033.md  adr-mcps-034.md  adr-mcps-035.md  adr-mcps-036.md  adr-mcps-037.md  adr-mcps-038.md  adr-mcps-039.md  (+10 more)
docs/archive/: ARCHIVE.md
docs/bench/: adr-051-baseline-local.json  adr-051-benchmark-envelope.json  adr-051-load-harness-envelope.md  adr-051-slo-targets.json  adr-051-slo-targets.md
docs/blog/: why-mcp-needs-runtime-evidence.md
docs/design/: active-profile-and-legacy-quarantine.md  http-evidence-carrier-cutover.md
docs/dev/: port-registry.md
docs/grilling-seed/: mcp-re-next-grill-decisions.md  mcp-re-next-grill-transcript.md  mcp-re-v0.11-seed.md  mcp-re-v0.13-seed.md  mcps-client-integration-grill-input.md  mcps-v0.6-grill-decisions.md
docs/security/: README.md  audit-v0.1.md  audit-v0.2.md  finding-ledger.jsonl  fips-l3-ed25519-protection-level.md  gcloud-kms-validation.sh  gcp-kms-delegated-required.sh  gcp-kms-root-rotation.sh  gke-kms-wi-setup.sh  gke-multi-replica-validation.md  gke-multi-replica-validation.sh  gke-slo-baseline-runbook.md  gke-slo-phase.sh  google-validation-plan.md  mcp_re_gke_client.py  mcps-code-audit-2026-06-14.md  mcps-prerun.json  mcps-prescan.json  prescan-allow.json  remediation-v0.2.md
docs/spec/: composability.md  delegated-required-validation-matrix.md  ema-composition.md  http-profile-conformance-notes.md  http-profile-open-questions.md  layered-security-architecture.md  mcp-re-core-spec.md  mcps-core-spec.md  project-planning-brief.md  proposal-scope.md  root-authority-rotation.md  security-boundary.md  threat-coverage-matrix.md  upstream-proposal-brief.md  v0.3-claim-boundary.md  v0.3-claim-matrix.md  v0.5-claim-matrix.md
mcp-re-client-core/: BUILD.bazel  Cargo.toml
mcp-re-client-core/src/: audience.rs  audit.rs  authz.rs  correlation.rs  discovery.rs  enforcement.rs  lib.rs  probe.rs  request.rs  response.rs  signer.rs  trust_manifest.rs
mcp-re-client-core/tests/: authz_binding_preimage_test.rs  continuation_roundtrip_test.rs  discovery_test.rs  enforcement_accept_test.rs  response_roundtrip_test.rs  signed_request_vectors_test.rs  signer_audience_binding_test.rs  signer_custody_test.rs
mcp-re-client-proxy/: BUILD.bazel  Cargo.toml
mcp-re-client-proxy-cli/: BUILD.bazel  Cargo.toml
mcp-re-client-proxy-cli/src/: kms_signer.rs  main.rs  transport.rs
mcp-re-client-proxy/src/: lib.rs  proxy.rs  route.rs  transport.rs
mcp-re-client-proxy/tests/: continuation_driving_test.rs  e2e_topology_test.rs  proxy_roundtrip_test.rs
mcp-re-conformance/: BUILD.bazel  Cargo.toml  conformance_manifest.json  security_traceability_manifest.json
mcp-re-conformance/src/: echo_server.rs  fixtures.rs  http.rs  http_target.rs  lib.rs  loader.rs  main.rs  runner.rs  server.rs  stdio.rs  stdio_server_main.rs  stdio_target.rs  target.rs  vector.rs
mcp-re-conformance/tests/: acceptance_test.rs  audit_vocabulary_guard_test.rs  corpus_pinning_test.rs  delegation_cross_verification_test.rs  delegation_vectors_test.rs  discovery_enforcement_conformance_test.rs  drift_guard_test.rs  echo_server_test.rs  forbidden_claim_guard_test.rs  full_profile_parity_test.rs  http_harness_test.rs  http_profile_vectors_test.rs  mcp_2026_07_28_alignment_test.rs  method_name_drift_guard_test.rs  method_transparency_test.rs  object_suite_test.rs  rfc9421_cross_verification_test.rs  rfc9421_security_properties_test.rs  security_traceability_guard_test.rs  stdio_harness_test.rs
mcp-re-conformance/tools/: jose_cross_verify.py  requirements-cross-verify.txt  rfc9421_cross_verify.py
mcp-re-core/: BUILD.bazel  Cargo.toml
mcp-re-core/src/: audit.rs  canonical.rs  constraints.rs  crypto.rs  encoding.rs  envelope.rs  error.rs  hash.rs  ids.rs  lib.rs  mrt.rs  pipeline.rs  replay.rs  resolver.rs  signing.rs  time.rs  unwrap.rs  wire.rs
mcp-re-core/tests/: canonicalizer_proptest.rs  draft02_vectors_test.rs  firewall_test.rs  multi_round_trip_test.rs  signing_scope_test.rs  vectors_test.rs
mcp-re-demo/: BUILD.bazel  Cargo.toml
mcp-re-demo-fileserver/: BUILD.bazel  Cargo.toml
mcp-re-demo-fileserver/demo_root/: config.yaml  readme.txt
mcp-re-demo-fileserver/src/: lib.rs  main.rs  server.rs  stdio.rs
mcp-re-demo-fileserver/tests/: server_test.rs
mcp-re-demo/examples/: emit_mtls_fixtures.rs
mcp-re-demo/src/: bridge.rs  (+9 more)
mcp-re-host/: BUILD.bazel  Cargo.toml
mcp-re-http-profile/: BUILD.bazel  Cargo.toml
mcp-re-policy/: BUILD.bazel  Cargo.toml
mcp-re-proxy/: BUILD.bazel  Cargo.toml
mcp-re-stdio-bridge/: BUILD.bazel  Cargo.toml
mcp-re-transport/: BUILD.bazel  Cargo.toml
mcp-re-walkthrough/: BUILD.bazel  Cargo.toml  README.md
mcps-client-proxy-cli/: BUILD.bazel  Cargo.toml
mcps-core/: BUILD.bazel  Cargo.toml
(+749 files in other folders)
