# MCP-S — nested Bazel module (clean-room build-graph firewall)
#
# This MODULE.bazel makes the MCP-S Cargo workspace at components/mcps
# buildable via Bazel with ZERO submodules and no parent monorepo. It
# enforces the ADR-MCPS-001 clean-room firewall at the build-graph level:
# the module sees only its own crates + the crates.io deps pinned in its
# own committed Cargo.lock, and nothing from the surrounding repo.
#
# It can be used in two ways:
#
#   1. Standalone: `cd components/mcps && bazel test //...`
#      Proves the subtree is self-contained — the canonical hermetic
#      build/test for the publishable MCP-S workspace (ADR-MCPS-010/012).
#
#   2. As a nested module of the root monorepo via:
#          bazel_dep(name = "mcps", version = "0.0.1")
#          local_path_override(
#              module_name = "mcps",
#              path = "components/mcps",
#          )
#      Then targets become accessible as `@mcps//mcps-core:mcps_core`
#      from anywhere in the parent workspace.
#
# Versions and toolchain pin to the root monorepo's shared Rust pins
# (infrastructure/config/build/build-manifests.toml [bazel_deps]/[rust])
# so the nested module is fully self-contained AND consistent with the
# parent.

module(
    name = "mcps",
    version = "0.0.1",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "platforms", version = "1.0.0")

# OCI image packaging of the production proxy artifact (mcps_proxy_ext) — pinned
# to the SAME versions as the root monorepo (infrastructure/config/build) so the
# nested module stays consistent with the parent's shared deps.
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
register_toolchains("@zig_sdk//toolchain:linux_amd64_gnu.2.28")

########################################
# Tar toolchains (required for rules_pkg with bzlmod)
########################################

bazel_lib_toolchains = use_extension(
    "@aspect_bazel_lib//lib:extensions.bzl",
    "toolchains",
)
bazel_lib_toolchains.tar()
bazel_lib_toolchains.zstd()
use_repo(
    bazel_lib_toolchains,
    "bsd_tar_toolchains",
    "zstd_toolchains",
)

########################################
# Rust toolchain — pinned to the workspace's required version
########################################

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.94.1"],
    # Cross-compile the production proxy artifact to the linux/amd64 image
    # platform from the darwin host (OCI packaging, Phase 1).
    extra_target_triples = ["x86_64-unknown-linux-gnu"],
)

########################################
# Cross C++ toolchain (zig) for OCI image builds
########################################
# Hermetic zig-based cc toolchain so the proxy's C FFI deps (cryptoki-sys, etc.)
# cross-compile to the linux/amd64 image platform from a darwin host.

zig_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(zig_toolchains, "zig_sdk")

########################################
# Cargo dependencies via crate_universe
########################################
#
# Reads components/mcps' own Cargo.toml + Cargo.lock and exposes every
# external crate as `@crates_mcps//:<crate-name>`. The hub MUST be named
# `crates_mcps` so the existing `@crates_mcps//:...` references in the
# per-crate BUILD files keep resolving unchanged whether the module is
# built standalone or as a nested module of the root.

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates_mcps",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates_mcps")

########################################
# OCI base image (distroless glibc + libstdc++ for the C FFI deps)
########################################
# The proxy binary is x86_64-unknown-linux-gnu (glibc) with C FFI dependencies
# (cryptoki-sys, ring), so the base must provide glibc + a C runtime — distroless
# cc (gcr.io/distroless/cc-debian12). linux/amd64 only for the v1 single-arch
# image. Digest-pinned to mirror the root monorepo's digest-pinning convention.

oci = use_extension(
    "@rules_oci//oci:extensions.bzl",
    "oci",
)
oci.pull(
    name = "distroless_cc_base",
    digest = "sha256:e1065a1d58800a7294f74e67c32ec4146d09d6cbe471c1fa7ed456b2d2bf06e0",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "distroless_cc_base",
    "distroless_cc_base_linux_amd64",
)
