load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-40 (ADR-MCPS-044 §mcp-re-client-core): the client-side shared seam consumed
# by the local proxy and the SDK. Pure library — depends only on the verification
# crate plus serde_json (request construction). No networking/async/fs: those are
# the mode-specific layers ABOVE this seam.
nt_rust_library(
    name = "mcp_re_client_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_client_core",
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde_json",
    ],
)

# Inline crate unit tests (request / response / enforcement / authz / signer /
# correlation #[cfg(test)] modules). The MCPRE-122 delegated-verify tests build
# server-signed fixtures via mcp-re-http-profile custody/sign/rejection primitives.
nt_rust_test(
    name = "mcp_re_client_core_test",
    crate = ":mcp_re_client_core",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde_json",
    ],
)
