[package]
name = "mcp-re-client-core"
version = "0.12.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP-RE client-side core — the shared seam (consumed by the client proxy and SDK) that constructs signed draft-02 requests and binds responses. Pure: no networking/async/fs."

[dependencies]
# ADR-MCPRE-050 cutover: the client core is the shared RFC 9421 evidence-construction
# / verification seam below the proxy and SDK. It builds on mcp-re-http-profile (the
# RFC 9421 + RFC 9530 carrier) and mcp-re-core's profile-agnostic primitives (keys,
# replay, trust resolver, errors); it MUST NOT pull in any networking/async/fs crate
# (those are the mode-specific layers above this seam).
mcp-re-core = { path = "../mcp-re-core" }
mcp-re-http-profile = { path = "../mcp-re-http-profile" }
serde_json = { workspace = true }

[features]
# MCPS-53 (#200): the non-normative opportunistic support PROBE is dev/test only.
# It is compiled ONLY under cfg(test) or this explicit, non-default feature, so a
# default (production) build does not link it — an enforced boundary, not just a
# doc note. The probe can never affect a trust decision regardless.
default = []
dev-probe = []

[lib]
name = "mcp_re_client_core"
path = "src/lib.rs"
