load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-49 (ADR-MCPS-044 §Proxy transparency / §Security adapter scope): the local
# client-side MCP-RE proxy — the first adoption bridge. Mode-specific layer above the
# pure mcp-re-client-core seam; the transport is abstracted behind a trait so the
# security pipeline links no networking crate here.
nt_rust_library(
    name = "mcp_re_client_proxy",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_client_proxy",
    edition = "2021",
    deps = [
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# The proxy signs a plain-MCP request, forwards to an in-process MCP-RE remote,
# verifies the signed response, and returns plain MCP: signed round-trip, legacy
# route under explicit policy, strict-mode fail-closed, and transparency.
nt_rust_test(
    name = "proxy_roundtrip_test",
    srcs = ["tests/proxy_roundtrip_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_client_proxy",
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-51: four-hop end-to-end topology (ordinary client -> proxy -> remote MCP-RE
# -> ordinary server) running the ADR-044 §10 conformance suite over real wiring.
nt_rust_test(
    name = "e2e_topology_test",
    srcs = ["tests/e2e_topology_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_client_proxy",
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-047 step 7: the client proxy drives the InputRequiredResult ->
# continuation round trip transparently for an unmodified plain-MCP client.
# (MCPS-70: gate-discovered #220 drift — cargo ran it, Bazel had no target.)
nt_rust_test(
    name = "continuation_driving_test",
    srcs = ["tests/continuation_driving_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_client_proxy",
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)
