load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-49 (ADR-MCPS-044 §Proxy transparency / §Security adapter scope): the local
# client-side MCP-RE proxy — the first adoption bridge. Mode-specific layer above the
# pure mcp-re-client-core seam; the transport is abstracted behind a trait so the
# security pipeline links no networking crate here.
nt_rust_library(
    name = "mcp_re_client_proxy",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_client_proxy",
    edition = "2021",
    deps = [
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)
